Reset password button & scroll the login dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="login_verify_text">This activity requires you to be logged in.</string>
     <string name="login_verify_cancel">Cancel</string>
     <string name="login_verify_login">Login</string>
+    <string name="login_reset_password">Reset Password</string>
 
     <!-- dialog_login_register.xml -->
     <string name="login_retype_password">Retype Password</string>
@@ -29,6 +30,11 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="error_password_retype">Password and password retype are not the same</string>
+
+    <!-- LoginActivity.java messages -->
+    <string name="reset_email_sent">Password reset email sent</string>
+    <string name="reset_email_required">Email field is required for reset</string>
+    <string name="missing_user_data">Not provided by user</string>
 
     <!-- **** End Firebase login text **** -->
 </resources>
